# -terminal-calculator

./: CMakeLists.txt  README.md  main.c
libs/: function.c  function.h  hash_table.h  node.c  node.h  parsing.c  parsing.h  stack.c  stack.h  str.c  str.h  string.c  string.h
tests/: calc_test.c  string_test.c
